--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,190 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    color: steelblue;
     height: 3rem;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
     position: relative;
+}
+.main {
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    margin-top: 1.2em;
+    -webkit-box-shadow: 3px 4px 10px 0px rgba(163,164,166,1);
+    -moz-box-shadow: 3px 4px 10px 0px rgba(163,164,166,1);
+    box-shadow: 3px 4px 10px 0px rgba(163,164,166,1);
+    margin-bottom: 1.5em;
+}
+.tipMere {
+    margin-left: auto;
+    margin-right: auto;
+    border-right: 1px solid white;
+}
+.tipMere input[type=radio]{
+    display: inline-block;
+    margin: 0.6em 0.4em 0.6em 1em;
 
+}
+.sirVis input[type='number'] {
+    -moz-appearance:text;
+}
+.sirVis input::-webkit-outer-spin-button,
+.sirVis input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+.sirVis label {
+    padding: 0.5em 1em;
+    font-size: 1em;
+}
+.sirVisInput {
+    width: 5em;
+    padding: 0.2em;
+    border: 1px solid grey;
+    border-radius: 5px;
+}
+.sirVisInput:focus {
+    border: 1px solid steelblue;
+    border-radius: 5px;
+    outline: none;
+    resize: none;
+    background-color: white;
+}
+.sirVis input::placeholder, .kolicina input::placeholder {
+    color: transparent;
+}
+.kolicina {
+    margin-bottom: 1.2em;
+    padding-left: 1em;
+}
+.kolicina label {
+    padding-right: 1em;
+    font-size: 1em;
+}
+.kolicina input[type=number] {
+    width: 4em;
+    padding: 0.2em;
+    border: 1px solid grey;
+    border-radius: 5px;
+}
+.kolicina input[type=number]:focus {
+    border-radius: 5px;
+    outline: none;
+    resize: none;
+    background-color: white;
+}
+.brKr {
+    margin-bottom: 0.5em
+}
+.brKr label {
+    padding: 0.5em 1em;
+}
+.brKr input[type='radio']{
+    margin: 0.6em 0.4em 0.6em 1em;
+    transform: scale(1.5, 1.5);
+    -moz-transform: scale(1.5, 1.5);
+    -ms-transform: scale(1.5, 1.5);
+    -webkit-transform: scale(1.5, 1.5);
+    -o-transform: scale(1.5, 1.5);
+    accent-color: steelblue;
+}
+.otv label{
+    padding: 0.5em 1em; 
+}
+.otv input[type='radio']{
+    margin: 0.6em 0.5em 0.6em 0.65em;
+    transform: scale(1.5, 1.5);
+    -moz-transform: scale(1.5, 1.5);
+    -ms-transform: scale(1.5, 1.5);
+    -webkit-transform: scale(1.5, 1.5);
+    -o-transform: scale(1.5, 1.5);
+}
+.colorPicker{
+    border-right: 1px solid white;
+}
+.colorPicker label{
+    display: block;
+}
+.colorPicker input{
+    display: none;
+}
+.colButton {
+    display: none;
+}
+.button {
+        display: block;
+        width: 25px;
+        height: 25px;
+        margin: 7px;
+        cursor: pointer;
+}
+.button span {
+        display: block;
+        margin-left: 0.5em;
+        width: 25px;
+        height: 25px;
+        padding: 0;
+        top: 50%;
+        left: 50%;
+        background: #eeeeee;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+        transition: ease .3s;
+}
+.button span:hover {
+    transform: scale(1.2)
+  }
+.belo .button span {
+    margin-top: 1em;
+    background-color: white;
+}
+.belo input:checked ~ .button span {
+    transform: scale(1.4);
+}
+.braon .button span {
+    background-color: #724a25
+}
+.braon input:checked ~ .button span {
+    transform: scale(1.4);
+}
+.crno .button span {
+    background-color: black
+}
+.crno input:checked ~ .button span {
+    transform: scale(1.4);
+}
+.deoForme {
+    border-right:1px solid white ;
+}
+.opcije{
+    display: grid;
+    position: relative;
+}
+.opcije label input[type='checkbox']{
+    transform: scale(1.4, 1.4);
+    -moz-transform: scale(1.4, 1.4);
+    -ms-transform: scale(1.4, 1.4);
+    -webkit-transform: scale(1.4, 1.4);
+    -o-transform: scale(1.4, 1.4);
+    accent-color: steelblue;
+    position: absolute;
+    left: 10em;
+    margin-top: 0.4em;
+}
+.nacinOtvaranja{
+    text-align: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-bottom: 1px solid white;
+    margin-bottom: 1.1em;
+}
+.nacinOtvaranja label {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+.otvaranja{
+    margin: auto 0.5em;  
+}
+.potvrdiDugme {
+    padding-bottom: 1.2em;
 }
 .closeBar .col-8{
     margin-top: auto;
@@ -34,6 +212,23 @@
     border-radius: 4px;
     color: rgb(187, 30, 16);
 }
+.modalDugme {
+    display: none;
+}
+.maliDel {
+    padding-left: 8px;
+    padding-right: 8px;
+    border: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    color: red;
+}
+.maliDel:hover {
+    color: red;
+    border: 1px solid red;
+    border-radius: 10px;
+}
 .footer{
     height: 2em;
     width: 100vw;
@@ -56,8 +251,114 @@
     .footer {
         height: 1.5rem;
     }
-
+    .main {
+        margin-top: 0;
+    }
+    .tipMere {
+        text-align: center;
+        border: none;
+        border-bottom: 1px solid white;
+        margin-bottom: 0.8em;
+    }
+    .tipMere input[type=radio]{
+        display: inline-block;
+        margin: 0.6em 1em 1.5em 2em;
+        transform: scale(2, 2);
+        -moz-transform: scale(2, 2);
+        -ms-transform: scale(2, 2);
+        -webkit-transform: scale(2, 2);
+        -o-transform: scale(2, 2);
+        accent-color: rgb(187,30,16)
+    }
+    .colorPicker{
+        text-align: center;
+        border: none;
+        border-bottom: 1px solid rgb(200,202,196);
+    }
+    .colorPicker label{
+        display: inline-block;
+    }
+    .dugmad {
+        text-align: center;
+    }
+    .button {
+        display: block;
+        width: 50px;
+        height: 45px;
+    }
+    .button span {
+        display: block;
+        width: 30px;
+        height: 30px;
+        background: #eeeeee;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+        transition: ease .3s;
+    }
+    .sirVis, .kolicina {
+        margin-top: 1.2em;
+        text-align: center;
+    }
+    .sirVis input::placeholder, .kolicina input::placeholder {
+        font-style: italic;
+        padding-left: 0.5em;
+        color: grey;
+    }
+    .sirVis label, .kolicina label {
+        display: none;
+    }
+    .sirVis input[type=number], .kolicina input[type=number] {
+        padding: 0.6em;
+        width: 7em;
+        margin-left: 1.5em;
+        margin-right: 1.5em;
+    }
+    .deoForme {
+        border: none;
+        border-bottom: 1px solid white;
+    }
+    .brKr, .otv {
+        text-align: center;
+    }
+    .brKr input[type="radio"], .otv input[type="radio"]{
+        transform: scale(2, 2);
+        -moz-transform: scale(2, 2);
+        -ms-transform: scale(2, 2);
+        -webkit-transform: scale(2, 2);
+        -o-transform: scale(2, 2);
+        margin-right: 0.8em;
+    }
+    .colButton {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border: none;
+        border-left: 1px solid white;
+        border-bottom: 1px solid white;
+        border-right: 1px solid white;
+        padding: 0.4em 1em;
+        border-bottom-left-radius: 1em;
+        border-bottom-right-radius: 1em;
+        font-style: italic;
+        background-color: rgb(200,202,196);
+    }
+    .listaPozicija {
+        display: none;
+    }
+    .modalDugme {
+        display: block
+    }
+    .opcije {
+        margin: 1em auto;
+    }
+    .opcije label {
+        display: block;
+        padding: 0.5em;
+    }
+    .dugmadZaMaliEkran{
+        padding-bottom: 3rem;
+    }
 }
+
 @media print {
     .footer {
         display: none;
